# yieldcast

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  index.html  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  pipeline.py  utils.py
src/yieldcast/: __init__.py  cli.py  models.py  report.py  simulator.py
src/yieldcast/optimizer/: fertilizer.py  planting.py
src/yieldcast/predictor/: satellite.py  soil.py  weather.py  yield_model.py
tests/: test_benchmark.py  test_core.py  test_integration.py  test_models.py  test_optimizer.py  test_satellite.py  test_simulator.py  test_soil.py  test_weather.py  test_yield_model.py
